@@ -1,8 +1,24 @@
 package io.kestra.core.services;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
+
+import org.apache.commons.lang3.ClassUtils;
+import org.apache.commons.lang3.builder.EqualsBuilder;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
+
 import io.kestra.core.exceptions.FlowProcessingException;
 import io.kestra.core.exceptions.IllegalVariableEvaluationException;
+import io.kestra.core.models.Plugin;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.*;
 import io.kestra.core.models.flows.check.Check;
@@ -18,25 +34,14 @@ import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.serializers.JacksonMapper;
 import io.kestra.core.utils.ListUtils;
+import io.kestra.core.utils.SecretUtils;
 import io.kestra.plugin.core.flow.Pause;
+import io.micronaut.core.annotation.Nullable;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 import jakarta.inject.Singleton;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.ClassUtils;
-import org.apache.commons.lang3.builder.EqualsBuilder;
-
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 /**
  * Provides business logic for manipulating flow objects.
@@ -67,7 +72,7 @@ public class FlowService {
      * <p>
      * The validation of the flow is done from the source after injecting all plugin default values.
      *
-     * @param flow             The flow.
+     * @param flow The flow.
      * @param strictValidation Specifies whether to perform a strict validation of the flow.
      * @return The created {@link FlowWithSource}.
      */
@@ -92,14 +97,18 @@ public class FlowService {
         return flowRepository
             .orElseThrow(() -> new IllegalStateException("Cannot perform operation on flow. Cause: No FlowRepository"));
     }
+
     private static String formatValidationError(String message) {
         if (message.startsWith("Illegal flow source:")) {
             // Already formatted by YamlParser, return as-is
             return message;
+        } else if (message.startsWith(":")) {
+            message = message.substring(1);
         }
         // For other validation errors, provide context
         return "Validation error: " + message;
     }
+
     /**
      * Evaluates all checks defined in the given flow using the provided inputs.
      * <p>
@@ -108,7 +117,7 @@ public class FlowService {
      * variable error, the corresponding {@link Check} is added to the returned list.
      * </p>
      *
-     * @param flow   the flow containing the checks to evaluate
+     * @param flow the flow containing the checks to evaluate
      * @param inputs the input values used when evaluating the conditions
      * @return a list of checks whose conditions evaluated to {@code false} or failed to evaluate
      */
@@ -123,19 +132,21 @@ public class FlowService {
                         falseConditions.add(check);
                     }
                 } catch (IllegalVariableEvaluationException e) {
-                    log.debug("[tenant: {}] [namespace: {}] [flow: {}] Failed to evaluate check condition. Cause.: {}",
+                    log.debug(
+                        "[tenant: {}] [namespace: {}] [flow: {}] Failed to evaluate check condition. Cause.: {}",
                         flow.getTenantId(),
                         flow.getNamespace(),
                         flow.getId(),
                         e.getMessage(),
                         e
                     );
-                    falseConditions.add(Check
-                        .builder()
+                    falseConditions.add(
+                        Check
+                            .builder()
                             .message("Failed to evaluate check condition. Cause: " + e.getMessage())
                             .behavior(Check.Behavior.BLOCK_EXECUTION)
                             .style(Check.Style.ERROR)
-                        .build()
+                            .build()
                     );
                 }
             }
@@ -145,62 +156,63 @@ public class FlowService {
     }
 
     /**
-     * Validates the given flow source.
-     * <p>
-     * the YAML source can contain one or many objects.
+     * Validates the given flow sources.
      *
-     * @param tenantId  The tenant identifier.
-     * @param flows     The YAML source.
-     * @return  The list validation constraint violations.
+     * @param tenantId The tenant identifier.
+     * @param flowSources The flow sources to validate.
+     * @return The list of validation constraint violations.
      */
-    public List<ValidateConstraintViolation> validate(final String tenantId, final String flows) {
+    public List<ValidateConstraintViolation> validate(final String tenantId, final List<FlowSource> flowSources) {
         AtomicInteger index = new AtomicInteger(0);
-        return Stream
-            .of(flows.split("\\n+---\\n*?"))
-            .map(source -> {
-                ValidateConstraintViolation.ValidateConstraintViolationBuilder<?, ?> validateConstraintViolationBuilder = ValidateConstraintViolation.builder();
-                validateConstraintViolationBuilder.index(index.getAndIncrement());
+        List<ValidateConstraintViolation> constraints = new ArrayList<>();
+        flowSources.forEach(flowSource ->
+        {
+            ValidateConstraintViolation.ValidateConstraintViolationBuilder<?, ?> constraintsBuilder = ValidateConstraintViolation.builder();
+            constraintsBuilder.index(index.getAndIncrement());
+            constraintsBuilder.filename(flowSource.filename());
 
-                try {
-                    FlowWithSource flow = pluginDefaultService.parseFlowWithVersionDefaults(tenantId, source, true);
-                    Integer sentRevision = flow.getRevision();
-                    if (sentRevision != null) {
-                        Integer lastRevision = Optional.ofNullable(repository().lastRevision(tenantId, flow.getNamespace(), flow.getId()))
-                            .orElse(0);
-                        validateConstraintViolationBuilder.outdated(!sentRevision.equals(lastRevision + 1));
-                    }
+            try {
+                String source = flowSource.content();
+                FlowWithSource flow = pluginDefaultService.parseFlowWithVersionDefaults(tenantId, source, true);
 
-                    validateConstraintViolationBuilder.deprecationPaths(deprecationPaths(flow));
-                    validateConstraintViolationBuilder.warnings(warnings(flow, tenantId));
-                    validateConstraintViolationBuilder.infos(relocations(source).stream().map(relocation -> relocation.from() + " is replaced by " + relocation.to()).toList());
-                    validateConstraintViolationBuilder.flow(flow.getId());
-                    validateConstraintViolationBuilder.namespace(flow.getNamespace());
-
-                    // Do not perform a strict parsing validation to ignore unknown
-                    // properties that might be injecting through default values.
-                    modelValidator.validate(pluginDefaultService.injectAllDefaults(flow, false));
-
-                } catch (ConstraintViolationException e) {
-                    String friendlyMessage = formatValidationError(e.getMessage());
-                    validateConstraintViolationBuilder.constraints(friendlyMessage);
-                } catch (FlowProcessingException e) {
-                    if (e.getCause() instanceof ConstraintViolationException cve) {
-                        String friendlyMessage = formatValidationError(cve.getMessage());
-                        validateConstraintViolationBuilder.constraints(friendlyMessage);
-                    } else {
-                        Throwable cause = e.getCause() != null ? e.getCause() : e;
-                        validateConstraintViolationBuilder.constraints("Unable to validate the flow: " + cause.getMessage());
-                    }
-                } catch (RuntimeException re) {
-                    // In case of any error, we add a validation violation so the error is displayed in the UI.
-                    // We may change that by throwing an internal error and handle it in the UI, but this should not occur except for rare cases
-                    // in dev like incompatible plugin versions.
-                    log.error("Unable to validate the flow", re);
-                    validateConstraintViolationBuilder.constraints("Unable to validate the flow: " + re.getMessage());
+                Integer sentRevision = flow.getRevision();
+                if (sentRevision != null) {
+                    Integer lastRevision = Optional.ofNullable(repository().lastRevision(tenantId, flow.getNamespace(), flow.getId())).orElse(0);
+                    constraintsBuilder.outdated(!sentRevision.equals(lastRevision + 1));
                 }
-                return validateConstraintViolationBuilder.build();
-            })
-            .collect(Collectors.toList());
+
+                constraintsBuilder.deprecationPaths(deprecationPaths(flow));
+                constraintsBuilder.warnings(warnings(flow, tenantId));
+                constraintsBuilder.infos(relocations(source).stream().map(relocation -> relocation.from() + " is replaced by " + relocation.to()).toList());
+                constraintsBuilder.flow(flow.getId());
+                constraintsBuilder.namespace(flow.getNamespace());
+
+                // Do not perform a strict parsing validation to ignore unknown
+                // properties that might be injecting through default values.
+                modelValidator.validate(pluginDefaultService.injectAllDefaults(flow, false));
+            } catch (ConstraintViolationException e) {
+                String friendlyMessage = formatValidationError(e.getMessage());
+                constraintsBuilder.constraints(friendlyMessage);
+            } catch (FlowProcessingException e) {
+                if (e.getCause() instanceof ConstraintViolationException cve) {
+                    String friendlyMessage = formatValidationError(cve.getMessage());
+                    constraintsBuilder.constraints(friendlyMessage);
+                } else {
+                    Throwable cause = e.getCause() != null ? e.getCause() : e;
+                    constraintsBuilder.constraints("Unable to validate the flow: " + cause.getMessage());
+                }
+            } catch (RuntimeException e) {
+                // In case of any error, we add a validation violation so the error is displayed in the UI.
+                // We may change that by throwing an internal error and handle it in the UI, but this should not occur except for rare cases
+                // in dev like incompatible plugin versions.
+                log.error("Unable to validate the flow", e);
+                constraintsBuilder.constraints("Unable to validate the flow: " + e.getMessage());
+            }
+
+            constraints.add(constraintsBuilder.build());
+        });
+
+        return constraints;
     }
 
     public FlowWithSource importFlow(String tenantId, String source) throws FlowProcessingException {
@@ -208,7 +220,6 @@ public class FlowService {
     }
 
     public FlowWithSource importFlow(String tenantId, String source, boolean dryRun) throws FlowProcessingException {
-
         final GenericFlow flow = GenericFlow.fromYaml(tenantId, source);
 
         Optional<FlowWithSource> maybeExisting = repository().findByIdWithSource(
@@ -221,13 +232,13 @@ public class FlowService {
 
         // Inject default plugin 'version' props before converting
         // to flow to correctly resolve all plugin type.
-        FlowWithSource flowToImport = pluginDefaultService.injectVersionDefaults(flow, false);
+        FlowWithSource flowToImport = pluginDefaultService.injectVersionDefaults(flow, false, true);
 
         if (dryRun) {
             return maybeExisting
-                .map(previous -> previous.isSameWithSource(flowToImport) && !previous.isDeleted() ?
-                    previous :
-                    FlowWithSource.of(flowToImport.toBuilder().revision(previous.getRevision() + 1).build(), source)
+                .map(
+                    previous -> previous.isSameWithSource(flowToImport) && !previous.isDeleted() ? previous
+                        : FlowWithSource.of(flowToImport.toBuilder().revision(previous.getRevision() + 1).build(), source)
                 )
                 .orElseGet(() -> FlowWithSource.of(flowToImport, source).toBuilder().tenantId(tenantId).revision(1).build());
         } else {
@@ -277,7 +288,6 @@ public class FlowService {
         return deprecationTraversal("", flow).toList();
     }
 
-
     public List<String> warnings(Flow flow, String tenantId) {
         if (flow == null) {
             return Collections.emptyList();
@@ -289,14 +299,19 @@ public class FlowService {
             .filter(io.kestra.plugin.core.trigger.Flow.class::isInstance)
             .map(io.kestra.plugin.core.trigger.Flow.class::cast)
             .toList();
-        flowTriggers.forEach(flowTrigger -> {
+        flowTriggers.forEach(flowTrigger ->
+        {
             if (ListUtils.emptyOnNull(flowTrigger.getConditions()).isEmpty() && flowTrigger.getPreconditions() == null) {
-                warnings.add("This flow will be triggered for EVERY execution of EVERY flow on your instance. We recommend adding the preconditions property to the Flow trigger '" + flowTrigger.getId() + "'.");
+                warnings.add(
+                    "This flow will be triggered for EVERY execution of EVERY flow on your instance. We recommend adding the preconditions property to the Flow trigger '" + flowTrigger.getId()
+                        + "'."
+                );
             }
         });
 
         // add warning for runnable properties (timeout, workerGroup, taskCache) when used not in a runnable
-        flow.allTasksWithChilds().forEach(task -> {
+        flow.allTasksWithChilds().forEach(task ->
+        {
             if (!(task instanceof RunnableTask<?>)) {
                 if (task.getTimeout() != null && !(task instanceof Pause)) {
                     warnings.add("The task '" + task.getId() + "' cannot use the 'timeout' property as it's only relevant for runnable tasks.");
@@ -310,6 +325,14 @@ public class FlowService {
             }
         });
 
+        // warn when @PluginProperty(secret=true) fields have plain-text values
+        flow.allTasksWithChilds().forEach(task ->
+            SecretUtils.validateSecretFields(task)
+                .forEach(msg -> warnings.add("Task '" + task.getId() + "': " + msg)));
+        ListUtils.emptyOnNull(flow.getTriggers()).forEach(trigger ->
+            SecretUtils.validateSecretFields(trigger)
+                .forEach(msg -> warnings.add("Trigger '" + trigger.getId() + "': " + msg)));
+
         return warnings;
     }
 
@@ -317,11 +340,13 @@ public class FlowService {
         try {
             Map<String, Class<?>> aliases = pluginRegistry.plugins().stream()
                 .flatMap(plugin -> plugin.getAliases().values().stream())
-                .collect(Collectors.toMap(
-                    Map.Entry::getKey,
-                    Map.Entry::getValue,
-                    (existing, duplicate) -> existing
-                ));
+                .collect(
+                    Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue,
+                        (existing, duplicate) -> existing
+                    )
+                );
             Map<String, Object> stringObjectMap = JacksonMapper.ofYaml().readValue(flowSource, JacksonMapper.MAP_TYPE_REFERENCE);
             return relocations(aliases, stringObjectMap);
         } catch (JsonProcessingException e) {
@@ -339,7 +364,8 @@ public class FlowService {
 
         List<String> violations = new ArrayList<>();
 
-        subFlows.forEach(subflow -> {
+        subFlows.forEach(subflow ->
+        {
             String regex = ".*\\{\\{.+}}.*"; // regex to check if string contains pebble
             String subflowId = subflow.getFlowId();
             String namespace = subflow.getNamespace();
@@ -362,7 +388,34 @@ public class FlowService {
         return violations;
     }
 
-    public record Relocation(String from, String to) {}
+    public record Relocation(String from, String to) {
+    }
+
+    public record TaskDeprecation(String taskId, String taskType, @Nullable String replacement) {}
+
+
+    public List<TaskDeprecation> findDeprecatedTasks(Flow flow) {
+        return flow.allTasksWithChilds().stream()
+            .flatMap(task -> {
+                String taskType = task.getType();
+                return pluginRegistry.findMetadataByIdentifier(taskType)
+                    .flatMap(metadata -> {
+                        // Case 1: task uses a deprecated alias name
+                        if (metadata.alias() != null) {
+                            boolean replacementDeprecated = Plugin.isDeprecated(metadata.type());
+                            String replacement = replacementDeprecated ? null : metadata.type().getName();
+                            return Optional.of(new TaskDeprecation(task.getId(), taskType, replacement));
+                        }
+                        // Case 2: task class itself is annotated @Deprecated
+                        if (Plugin.isDeprecated(metadata.type())) {
+                            return Optional.of(new TaskDeprecation(task.getId(), taskType, null));
+                        }
+                        return Optional.empty();
+                    })
+                    .stream();
+            })
+            .toList();
+    }
 
     @SuppressWarnings("unchecked")
     private List<Relocation> relocations(Map<String, Class<?>> aliases, Map<String, Object> stringObjectMap) {
@@ -377,7 +430,8 @@ public class FlowService {
             }
 
             if (entry.getValue() instanceof List<?> value) {
-                List<Relocation> listAliases = value.stream().flatMap(item -> {
+                List<Relocation> listAliases = value.stream().flatMap(item ->
+                {
                     if (item instanceof Map<?, ?> map) {
                         return relocations(aliases, (Map<String, Object>) map).stream();
                     }
@@ -390,7 +444,6 @@ public class FlowService {
         return relocations;
     }
 
-
     private Stream<String> deprecationTraversal(String prefix, Object object) {
         if (object == null || ClassUtils.isPrimitiveOrWrapper(object.getClass()) || String.class.equals(object.getClass())) {
             return Stream.empty();
@@ -399,7 +452,8 @@ public class FlowService {
         return Stream.concat(
             object.getClass().isAnnotationPresent(Deprecated.class) ? Stream.of(prefix) : Stream.empty(),
             allGetters(object.getClass())
-                .flatMap(method -> {
+                .flatMap(method ->
+                {
                     try {
                         Object fieldValue = method.invoke(object);
 
@@ -442,7 +496,8 @@ public class FlowService {
         // Use a Map to track the latest version of each flow
         Map<String, FlowInterface> latestFlows = new HashMap<>();
 
-        stream.forEach(flow -> {
+        stream.forEach(flow ->
+        {
             String uid = flow.uidWithoutRevision();
             FlowInterface existing = latestFlows.get(uid);
 
@@ -467,9 +522,10 @@ public class FlowService {
     public static List<AbstractTrigger> findRemovedTrigger(Flow flow, Flow previous) {
         return ListUtils.emptyOnNull(previous.getTriggers())
             .stream()
-            .filter(p -> ListUtils.emptyOnNull(flow.getTriggers())
-                .stream()
-                .noneMatch(c -> c.getId().equals(p.getId()))
+            .filter(
+                p -> ListUtils.emptyOnNull(flow.getTriggers())
+                    .stream()
+                    .noneMatch(c -> c.getId().equals(p.getId()))
             )
             .toList();
     }
@@ -477,9 +533,10 @@ public class FlowService {
     public static List<AbstractTrigger> findUpdatedTrigger(Flow flow, Flow previous) {
         return ListUtils.emptyOnNull(flow.getTriggers())
             .stream()
-            .filter(oldTrigger -> ListUtils.emptyOnNull(previous.getTriggers())
-                .stream()
-                .anyMatch(trigger -> trigger.getId().equals(oldTrigger.getId()) && !EqualsBuilder.reflectionEquals(trigger, oldTrigger))
+            .filter(
+                oldTrigger -> ListUtils.emptyOnNull(previous.getTriggers())
+                    .stream()
+                    .anyMatch(trigger -> trigger.getId().equals(oldTrigger.getId()) && !EqualsBuilder.reflectionEquals(trigger, oldTrigger))
             )
             .toList();
     }
@@ -521,13 +578,13 @@ public class FlowService {
      * Gets the executable flow for the given namespace, id, and revision.
      * Warning: this method bypasses ACL so someone with only execution right can create a flow execution
      *
-     * @param tenant    Rhe tenant ID.
+     * @param tenant Rhe tenant ID.
      * @param namespace The flow's namespace.
-     * @param id        The flow's ID.
-     * @param revision  The flow's revision.
+     * @param id The flow's ID.
+     * @param revision The flow's revision.
      * @return The {@link Flow}.
      * @throws NoSuchElementException if the requested flow does not exist.
-     * @throws IllegalStateException  if the requested flow is not executable.
+     * @throws IllegalStateException if the requested flow is not executable.
      */
     public Flow getFlowIfExecutableOrThrow(final String tenant, final String namespace, final String id, final Optional<Integer> revision) {
         if (flowRepository.isEmpty()) {
@@ -544,7 +601,7 @@ public class FlowService {
             throw new IllegalStateException("Requested Flow is disabled.");
         }
 
-        if (flow instanceof FlowWithException fwe ) {
+        if (flow instanceof FlowWithException fwe) {
             throw new IllegalStateException("Requested Flow is not valid. Error: " + fwe.getException());
         }
         return flow;
@@ -555,7 +612,8 @@ public class FlowService {
             throw noRepositoryException();
         }
 
-        return expandAll ? recursiveFlowTopology(new ArrayList<>(), tenant, namespace, id, destinationOnly) : flowTopologyRepository.get().findByFlow(tenant, namespace, id, destinationOnly).stream();
+        return expandAll ? recursiveFlowTopology(new ArrayList<>(), tenant, namespace, id, destinationOnly)
+            : flowTopologyRepository.get().findByFlow(tenant, namespace, id, destinationOnly).stream();
     }
 
     private Stream<FlowTopology> recursiveFlowTopology(List<String> visitedTopologies, String tenantId, String namespace, String id, boolean destinationOnly) {
@@ -570,14 +628,16 @@ public class FlowService {
         return flowTopologies.stream()
             // ignore already visited topologies
             .filter(x -> !visitedTopologies.contains(x.uid()))
-            .flatMap(topology -> {
+            .flatMap(topology ->
+            {
                 visitedTopologies.add(topology.uid());
                 Stream<FlowTopology> subTopologies = Stream
                     .of(topology.getDestination(), topology.getSource())
                     // ignore already visited nodes
                     .filter(x -> !visitedNodes.contains(x.getId()))
                     // recursively visit children and parents nodes
-                    .flatMap(relationNode -> {
+                    .flatMap(relationNode ->
+                    {
                         visitedNodes.add(relationNode.getId());
                         return recursiveFlowTopology(visitedTopologies, relationNode.getTenantId(), relationNode.getNamespace(), relationNode.getId(), destinationOnly);
                     });
